src/classes/ethical_gwen/parser/EthicalGwendolenParser.java
// $ANTLR 3.4 /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g 2014-04-04 13:09:37

package ethical_gwen.parser;

import ail.syntax.ast.*;
import gwendolen.syntax.ast.*;
import ethical_gwen.syntax.ast.*;
import java.util.HashMap;


import mcaplantlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class EthicalGwendolenParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACHIEVE", "ACHIEVEGOAL", "ADD_CONSTRAINT", "ADD_CONTENT", "ADD_CONTEXT", "ADD_PLAN", "BELIEFRULES", "BELIEFS", "BELIEVE", "BRULEARROW", "CLOSE", "COLON", "COMMA", "COMMENT", "CONST", "CONSTRAINT", "CURLYCLOSE", "CURLYOPEN", "DIV", "DOUBLEQUOTE", "EQ", "ETHIC", "ETHICS", "GOAL", "GOALS", "GWENDOLEN", "IN_CONTENT", "IN_CONTEXT", "LESS", "LINE_COMMENT", "LOCK", "MINUS", "MOD", "MULT", "NAME", "NEWLINE", "NOT", "NUMBER", "OPEN", "PERFORM", "PERFORMGOAL", "PLANS", "PLUS", "POINT", "QUERY", "RECEIVED", "RULEARROW", "SEMI", "SEND", "SENT", "SHRIEK", "SQCLOSE", "SQOPEN", "STRING", "TELL", "TELLHOW", "TRUE", "VAR", "WS", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__63=63;
    public static final int ACHIEVE=4;
    public static final int ACHIEVEGOAL=5;
    public static final int ADD_CONSTRAINT=6;
    public static final int ADD_CONTENT=7;
    public static final int ADD_CONTEXT=8;
    public static final int ADD_PLAN=9;
    public static final int BELIEFRULES=10;
    public static final int BELIEFS=11;
    public static final int BELIEVE=12;
    public static final int BRULEARROW=13;
    public static final int CLOSE=14;
    public static final int COLON=15;
    public static final int COMMA=16;
    public static final int COMMENT=17;
    public static final int CONST=18;
    public static final int CONSTRAINT=19;
    public static final int CURLYCLOSE=20;
    public static final int CURLYOPEN=21;
    public static final int DIV=22;
    public static final int DOUBLEQUOTE=23;
    public static final int EQ=24;
    public static final int ETHIC=25;
    public static final int ETHICS=26;
    public static final int GOAL=27;
    public static final int GOALS=28;
    public static final int GWENDOLEN=29;
    public static final int IN_CONTENT=30;
    public static final int IN_CONTEXT=31;
    public static final int LESS=32;
    public static final int LINE_COMMENT=33;
    public static final int LOCK=34;
    public static final int MINUS=35;
    public static final int MOD=36;
    public static final int MULT=37;
    public static final int NAME=38;
    public static final int NEWLINE=39;
    public static final int NOT=40;
    public static final int NUMBER=41;
    public static final int OPEN=42;
    public static final int PERFORM=43;
    public static final int PERFORMGOAL=44;
    public static final int PLANS=45;
    public static final int PLUS=46;
    public static final int POINT=47;
    public static final int QUERY=48;
    public static final int RECEIVED=49;
    public static final int RULEARROW=50;
    public static final int SEMI=51;
    public static final int SEND=52;
    public static final int SENT=53;
    public static final int SHRIEK=54;
    public static final int SQCLOSE=55;
    public static final int SQOPEN=56;
    public static final int STRING=57;
    public static final int TELL=58;
    public static final int TELLHOW=59;
    public static final int TRUE=60;
    public static final int VAR=61;
    public static final int WS=62;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public EthicalGwendolenParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public EthicalGwendolenParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return EthicalGwendolenParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g"; }


    	private static HashMap<String,Abstract_VarTerm> variables = new HashMap<String,Abstract_VarTerm>();
    	private Abstract_StringTerm agentname = new Abstract_StringTermImpl("");
    	


    // $ANTLR start "mas"
    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:59:1: mas returns [Abstract_MAS mas] :glist= egwendolenagents ;
    public final Abstract_MAS mas() throws RecognitionException {
        Abstract_MAS mas = null;


        ArrayList<Abstract_EthicalGwendolenAgent> glist =null;


        try {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:59:32: (glist= egwendolenagents )
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:59:34: glist= egwendolenagents
            {
            mas = new Abstract_MAS();

            pushFollow(FOLLOW_egwendolenagents_in_mas90);
            glist=egwendolenagents();

            state._fsp--;


            mas.setAgs(glist);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return mas;
    }
    // $ANTLR end "mas"



    // $ANTLR start "egwendolenagents"
    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:62:1: egwendolenagents returns [ArrayList<Abstract_EthicalGwendolenAgent> gags] : (g= gwendolenagent )+ ;
    public final ArrayList<Abstract_EthicalGwendolenAgent> egwendolenagents() throws RecognitionException {
        ArrayList<Abstract_EthicalGwendolenAgent> gags = null;


        Abstract_EthicalGwendolenAgent g =null;


        try {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:62:73: ( (g= gwendolenagent )+ )
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:63:2: (g= gwendolenagent )+
            {
            gags=new ArrayList<Abstract_EthicalGwendolenAgent>();

            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:64:2: (g= gwendolenagent )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==GWENDOLEN||LA1_0==NAME) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:64:3: g= gwendolenagent
            	    {
            	    pushFollow(FOLLOW_gwendolenagent_in_egwendolenagents111);
            	    g=gwendolenagent();

            	    state._fsp--;


            	    gags.add(g);

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return gags;
    }
    // $ANTLR end "egwendolenagents"



    // $ANTLR start "gwendolenagent"
    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:67:1: gwendolenagent returns [Abstract_EthicalGwendolenAgent g] : ( ( GWENDOLEN )? ) NAME w= word ETHICS (e= ethic )* BELIEFS (l= literal )* ( BELIEFRULES (r= brule )* )? GOALS (gl= goal )* PLANS (p= plan )* ;
    public final Abstract_EthicalGwendolenAgent gwendolenagent() throws RecognitionException {
        Abstract_EthicalGwendolenAgent g = null;


        String w =null;

        Abstract_Ethic e =null;

        Abstract_Literal l =null;

        Abstract_Rule r =null;

        Abstract_Goal gl =null;

        Abstract_GPlan p =null;


        try {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:67:59: ( ( ( GWENDOLEN )? ) NAME w= word ETHICS (e= ethic )* BELIEFS (l= literal )* ( BELIEFRULES (r= brule )* )? GOALS (gl= goal )* PLANS (p= plan )* )
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:68:9: ( ( GWENDOLEN )? ) NAME w= word ETHICS (e= ethic )* BELIEFS (l= literal )* ( BELIEFRULES (r= brule )* )? GOALS (gl= goal )* PLANS (p= plan )*
            {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:68:9: ( ( GWENDOLEN )? )
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:68:10: ( GWENDOLEN )?
            {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:68:10: ( GWENDOLEN )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==GWENDOLEN) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:68:10: GWENDOLEN
                    {
                    match(input,GWENDOLEN,FOLLOW_GWENDOLEN_in_gwendolenagent138); 

                    }
                    break;

            }


            }


            match(input,NAME,FOLLOW_NAME_in_gwendolenagent144); 

            pushFollow(FOLLOW_word_in_gwendolenagent148);
            w=word();

            state._fsp--;


            try {g = new Abstract_EthicalGwendolenAgent(w);} 
            		catch (Exception ex) {System.err.println(ex); agentname = new Abstract_StringTermImpl(w);}

            match(input,ETHICS,FOLLOW_ETHICS_in_gwendolenagent153); 

            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:71:9: (e= ethic )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ETHIC) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:71:10: e= ethic
            	    {
            	    pushFollow(FOLLOW_ethic_in_gwendolenagent158);
            	    e=ethic();

            	    state._fsp--;


            	    g.addEthic(e);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,BELIEFS,FOLLOW_BELIEFS_in_gwendolenagent165); 

            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:72:10: (l= literal )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==CONST||LA4_0==NOT||(LA4_0 >= TRUE && LA4_0 <= VAR)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:72:11: l= literal
            	    {
            	    pushFollow(FOLLOW_literal_in_gwendolenagent170);
            	    l=literal();

            	    state._fsp--;


            	    g.addInitialBel(l);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:73:2: ( BELIEFRULES (r= brule )* )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==BELIEFRULES) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:73:3: BELIEFRULES (r= brule )*
                    {
                    match(input,BELIEFRULES,FOLLOW_BELIEFRULES_in_gwendolenagent178); 

                    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:73:15: (r= brule )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==CONST||LA5_0==VAR) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:73:16: r= brule
                    	    {
                    	    pushFollow(FOLLOW_brule_in_gwendolenagent183);
                    	    r=brule();

                    	    state._fsp--;


                    	    g.addRule(r);

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;

            }


            match(input,GOALS,FOLLOW_GOALS_in_gwendolenagent192); 

            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:74:8: (gl= goal )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==CONST||LA7_0==NOT||(LA7_0 >= TRUE && LA7_0 <= VAR)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:74:9: gl= goal
            	    {
            	    pushFollow(FOLLOW_goal_in_gwendolenagent197);
            	    gl=goal();

            	    state._fsp--;


            	    g.addInitialGoal(gl);

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            match(input,PLANS,FOLLOW_PLANS_in_gwendolenagent204); 

            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:75:8: (p= plan )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==MINUS||LA8_0==PLUS) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:75:9: p= plan
            	    {
            	    pushFollow(FOLLOW_plan_in_gwendolenagent209);
            	    p=plan();

            	    state._fsp--;


            	    try {g.addPlan(p);} catch (Exception ex) {System.err.println(ex);}

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return g;
    }
    // $ANTLR end "gwendolenagent"



    // $ANTLR start "ethic"
    // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:77:1: ethic returns [Abstract_Ethic e] : ETHIC OPEN c= pred COMMA e1= pred COMMA n= NUMBER CLOSE ;
    public final Abstract_Ethic ethic() throws RecognitionException {
        Abstract_Ethic e = null;


        Token n=null;
        Abstract_Predicate c =null;

        Abstract_Predicate e1 =null;


        try {
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:77:34: ( ETHIC OPEN c= pred COMMA e1= pred COMMA n= NUMBER CLOSE )
            // /Users/lad/Eclipse/EthicalGwendolen/src/classes/ethical_gwen/parser/EthicalGwendolen.g:77:36: ETHIC OPEN c= pred COMMA e1= pred COMMA n= NUMBER CLOSE
            {
            match(input,ETHIC,FOLLOW_ETHIC_in_ethic226); 

            match(input,OPEN,FOLLOW_OPEN_in_ethic228); 

            pushFollow(FOLLOW_pred_in_ethic232);
            c=pred();

            state._fsp--;


            match(input,COMMA,FOLLOW_COMMA_in_ethic234); 
